extend stage 3
